Refactor: 구분자 검사 기능 InputTransducer -> UserNameController 이동